argo-rollouts/rollout-demo.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo
  namespace: default
spec:
  selector:
    app: rollouts-demo
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-demo-canary
  namespace: default
spec:
  selector:
    app: rollouts-demo
  ports:
  - port: 80
    targetPort: 8080
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: default
spec:
  replicas: 2
  strategy:
    canary:
      canaryService: rollouts-demo-canary
      stableService: rollouts-demo
      steps:
      - setWeight: 20
      - pause: {duration: 10}
      - setWeight: 50
      - pause: {duration: 10}
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: web
        image: argoproj/rollouts-demo:blue
        ports:
        - containerPort: 8080
