argo-rollouts/ingressroute-argorollouts.yaml
# ingressroute-argorollouts.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argo-rollouts-dashboard
  namespace: argo-rollouts
spec:
  entryPoints:
    - web                             # HTTP(80)
  routes:
    # 정적 자원 및 SPA 진입점
    - match: Host(`argorollouts.dokjongban.com`) && PathPrefix(`/rollouts`)
      kind: Rule
      middlewares:
        - name: rollouts-basic-auth
      services:
        - name: argo-rollouts-dashboard
          port: 3100
    # 대시보드 내부 API
    - match: Host(`argorollouts.dokjongban.com`) && PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: rollouts-basic-auth
      services:
        - name: argo-rollouts-dashboard
          port: 3100
